# embeddenator

./: .env.example  .gitignore  .plan_tmp_path  BRANCH_CLEANUP_RECOMMENDATION.md  CHANGELOG.md  Cargo.toml  Dockerfile.holographic  Dockerfile.tool  LICENSE  PROJECT_STATUS.md  QA_AUDIT_1.0.0_READINESS.md  README.md  RWLOCK_UNWRAP_FIXES.md  SPLIT_TRACKER.md  TASK_004_RUNNER_QUICKSTART.md  TASK_004_STATUS_REPORT.md  TASK_006_PERFORMANCE_BENCHMARKS.md  TASK_007_INCREMENTAL_UPDATES_COMPLETE.md  TASK_007_VERIFICATION.md  TASK_009_SIMD_OPTIMIZATION_COMPLETE.md  TASK_010_COMPLETE.md  TASK_010_PROPERTY_TESTING_REPORT.md  TASK_REGISTRY.md  TESTING.md  UNWRAP_AUDIT_COMPLETE.md  UNWRAP_FIXES_BEFORE_AFTER.md  UNWRAP_FIXES_SUMMARY.md  UNWRAP_QUICK_REFERENCE.md  VERSION_ROADMAP.md  avoid-read-locks.md  bench-a.md  bench-b.md  bench-c.md  build_holographic_os.py  ci_build_monitor.sh  codebase-analysis-report.md  container_validation_report.md  context-1.md  context.md  encryption-context.md  (+10 more)
.context/: workflow_state_2026-01-02.json
.docker/: Dockerfile.embr-ci
.github/agents/: documentation-writer.agent.md  performance-tuner.agent.md  qa-tester.agent.md  rust-implementer.agent.md  vas-mathematician.agent.md  workflow-orchestrator.agent.md
.github/chatmodes/: embeddenator.chatmode.md
.github/workflows/: ARM64_RUNNER_SETUP.md  README.md  build-holographic-os.yml  build-push-images.yml  ci-amd64.yml  ci-arm64.yml  ci-pre-checks.yml  ci.yml  docker-build.yml  nightly-builds.yml
agentic-dev/plan/glossaries/: vsa_glossary.yaml
agentic-dev/plan/indexes/: api_surface.yaml
agentic-dev/plan/manifests/: agent_handoff.yaml
agentic-dev/plan/references/: code_patterns.yaml
agentic-dev/plan/subtasks/: wave_1_foundation.yaml  wave_2_extensions.yaml  (+1 more)
benches/: README.md  real_world.rs  retrieval.rs  vsa_ops.rs
docs/: ARM64_TEST_RESULTS.md  HIERARCHICAL_FORMAT.md  README.md  RECURSIVE_UNFOLDING.md  RWLOCK_RECOVERY_STRATEGY.md  SELF_HOSTED_CI_PROJECT_SPEC.md  SPECIALIZED_AI_ASSISTANTS.md  THROUGHPUT.md
docs/adr/: ADR-001-sparse-ternary-vsa.md  ADR-002-multi-agent-workflow-system.md  ADR-003-self-hosted-runner-architecture.md  ADR-004-holographic-os-container-design.md  ADR-005-hologram-package-isolation.md  ADR-006-dimensionality-sparsity-scaling.md  ADR-010-router-shard-bounded-indexing.md  ADR-011-multi-input-namespace-management.md  ADR-012-reusable-codebook-index.md  ADR-013-hierarchical-manifest-format.md  README.md
docs/architecture/: CRATE_STRUCTURE_AND_CONCURRENCY.md  README.md  RWLOCK_RECOVERY_STRATEGY.md  bitsliced-tradeoffs-analysis.md
docs/benchmarks/: CONTEXT.md  INDEX.md  REENGAGE_PROMPT.md
docs/ci/: ARM64_TEST_RESULTS.md  README.md  SELF_HOSTED_CI_PROJECT_SPEC.md
docs/exploration/: EXECUTIVE-SUMMARY.md  bitsliced-performance-benchmarks.md  bitsliced-ternary-analysis.md  bitsliced-validation-results.md  gpu-acceleration-design.md  hybrid-tryte-precision-analysis.md
docs/handoff/: DOCUMENTATION_UPDATE_2026-01-10.md
docs/interop/: KERNEL_VSA_INTEROP.md  README.md
docs/performance/: README.md  SIMD_OPTIMIZATION.md
docs/research/: README.md
docs/retrieval/: README.md  RETRIEVAL_INDEX.md
docs/roadmap/: README.md  phase1-bitsliced-integration-plan.md
docs/testing/: ERROR_RECOVERY_TEST_COVERAGE.md  README.md
runner_automation/: README.md  __init__.py  cli.py  config.py  dynamic_manager.py  emulation.py  git_platforms.py  github_api.py  gpu_detection.py  hardware_capabilities.py  installer.py  manager.py  resource_optimizer.py  runner.py
scripts/: fetch_benchmark_data.sh
scripts/bench/: capture_env.sh  compress_baselines.sh  merge_reports.py  run_suite.sh  run_vector_suite.sh
scripts/datasets/: make_synthetic_dataset.sh
src/: cli.rs  codebook.rs  correction.rs  dimensional.rs  embrfs.rs  fuse_shim.rs  kernel_interop.rs  lib.rs  main.rs  resonator.rs  retrieval.rs  simd_cosine.rs  ternary.rs  ternary_vec.rs  vsa.rs
src/cli/: mod.rs
src/core/: codebook.rs  correction.rs  resonator.rs
src/fs/: embrfs.rs  fuse_shim.rs
src/interop/: kernel_interop.rs
src/retrieval/: retrieval.rs  signature.rs
src/testing/: mod.rs
src/vsa/: bitsliced.rs  block_sparse.rs  dimensional.rs  hybrid.rs  simd_cosine.rs  soft_ternary.rs  ternary.rs  ternary_vec.rs  vsa.rs
tests/: compression_missing_codec.rs  e2e_regression.rs  envelope_edge_cases.rs  error_recovery.rs  exhaustive_trit_tests.rs  integration_cli.rs  packed_trit_vec.rs  qa_comprehensive.rs  reconstruction_guarantee.rs  simd_cosine_tests.rs  unit_tests.rs
tests/concurrency/: lock_free_concurrency.rs
tests/hierarchical/: hierarchical_artifacts_e2e.rs
tests/invariants/: block_sparse_invariants.rs  exhaustive_trit_tests.rs  extended_dimensionality.rs  lens_variants.rs  reconstruction_guarantee.rs  register_validity.rs  simd_cosine_tests.rs  ternary_signature_index.rs
tests/qa/: qa_comprehensive.rs  test_metrics_integrity.rs  unit_tests.rs
tests/regression/: compression_backward_compat.rs
(+9 files in other folders)
