[package]
name = "embeddenator"
version = "0.1.0"
edition = "2021"
authors = ["Embeddenator Contributors"]
description = "Sparse ternary VSA holographic computing substrate"
license = "MIT"
repository = "https://github.com/tzervas/embeddenator"
homepage = "https://github.com/tzervas/embeddenator"
keywords = ["vsa", "holographic", "filesystem", "engram", "vector-symbolic"]
categories = ["filesystem", "compression", "science"]

[lib]
name = "embeddenator"
path = "src/lib.rs"

[[bin]]
name = "embeddenator"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha2 = "0.10"
rand = "0.8"
walkdir = "2.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
