[package]
name = "embeddenator"
version = "0.2.0"
edition = "2021"
authors = ["Tyler Zervas, and Agentic Embeddenator Contributors"]
description = "Sparse ternary VSA holographic computing substrate"
license = "MIT"
repository = "https://github.com/tzervas/embeddenator"
homepage = "https://github.com/tzervas/embeddenator"
keywords = ["vsa", "holographic", "filesystem", "engram", "vector-symbolic"]
categories = ["filesystem", "compression", "science"]
documentation = "https://docs.rs/embeddenator"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "embeddenator"
path = "src/lib.rs"
doctest = true

[[bin]]
name = "embeddenator"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha2 = "0.10"
rand = "0.8"
walkdir = "2.5"
# FUSE userspace filesystem (Linux/macOS only)
fuser = { version = "0.16", optional = true }
libc = "0.2"

[features]
default = []
fuse = ["fuser"]

[dev-dependencies]
tempfile = "3.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
